# Projet-PR72

./: CMakeLists.txt  README.md
app/: main.cpp
include/core/: patient.h  simulation.h
include/ui/: gui.h  home.h  realtime.h
resources/: styles.qss
src/core/: patient.cpp  simulation.cpp
src/ui/: gui.cpp  home.cpp  realtime.cpp
tests/: CMakeLists.txt  test_algos.cpp  test_kpi.cpp
